--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,2 +1,7 @@
 
-blank_issues_enabled: false
+blank_issues_enabled: true
+contact_links: 
+  - name: Test thing 
+    url: https://www.youtube.com/watch?v=nKvvdoAjqG4
+    about: Video link example
+  
