--- a/.github/ISSUE_TEMPLATE/FEATURE_REQUEST.yml
+++ b/.github/ISSUE_TEMPLATE/FEATURE_REQUEST.yml
@@ -25,10 +25,11 @@ body:
         label: Checklist
         description: "What needs to be created to complete this feature?"
         value: |
-          - [ ] nav section
+         " - [ ] nav section
           - [ ]
 
           ...
+          "
         render: markdown
       validations:
         required: false
