--- a/.github/ISSUE_TEMPLATE/FEATURE_REQUEST.yml
+++ b/.github/ISSUE_TEMPLATE/FEATURE_REQUEST.yml
@@ -21,7 +21,7 @@ body:
     required: true
 - type: textarea
     attributes:
-      label: Checklist
+      label: "Checklist"
       description: "What needs to be created to complete this feature?"
       value: |
        " - [ ] nav section
