--- a/.github/ISSUE_TEMPLATE/FEATURE_REQUEST.yml
+++ b/.github/ISSUE_TEMPLATE/FEATURE_REQUEST.yml
@@ -23,10 +23,11 @@ body:
   attributes:
     label: "Checklist items"
     description: "What needs to be created to complete this feature?"
-    value: |
+    value: "|
       - [ ] nav section
       - [ ]
-    render: markdown
+
+      "
   validations:
     required: false
         
