--- a/.github/ISSUE_TEMPLATE/FEATURE_REQUEST.yml
+++ b/.github/ISSUE_TEMPLATE/FEATURE_REQUEST.yml
@@ -1,7 +1,7 @@
 name: Feature Request
 description: File a request for a feature or idea
 title: "[Feature]: "
-lables: ["feature request"]
+lable: "feature request"
 projects: "food-hound-project"
 body:
 - type: markdown
