--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@apollo/server": "^4.11.3",
     "apollo-server-express": "^3.13.0",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "graphql": "^16.10.0",
     "mysql2": "^3.13.0",
